--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,7 +29,7 @@
           <div class="col-lg-5 ">
             <h3>Selamat Datang di<span>  DekProtProt.</span> Tempatnya Beli Keranjang.</h3>
             <p>DekProtProt Siap melayani kebutuhan Keranjang Anda.</p>
-            <a href="/admin" class="btn btn-primary tombols">Admin</a>
+            <a href="/admin/login" class="btn btn-primary tombols">Admin</a>
             <a href="/user/login" class="btn btn-secondary tombols">User</a>
           </div>
         <div class="col-lg-5 ml-auto">
