--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -25,7 +25,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="order/<%= user.id_user %> ">Order</a>
+                <a class="nav-link" href="/user/order/orderview/<%= user.id_user %> ">Order</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled">Disabled</a>
