--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -12,7 +12,7 @@
   <div class="container">
     <div class="forms-container">
       <div class="signin-signup">
-        <form action="/user/login" method="post" name="login" class="sign-in-form">
+        <form action="/admin/login" method="post" name="login" class="sign-in-form">
           <h2 class="title">Sign in</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
@@ -22,12 +22,12 @@
             <i class="fas fa-lock"></i>
             <input type="password" id="password" name="password" placeholder="password">
           </div>
-          <input type="submit" value="Login" class="btn solid" />          
+          <input type="submit" value="Login" class="btn solid" />
         </form>
         <% if (message){ %>
           <span style="color: red; text-align: center;"><%= message %> </span>
         <%} %>
-        <form action="/user/api/register" method="post" class="sign-up-form">
+        <form action="/admin/api/register" method="post" class="sign-up-form">
           <h2 class="title">Sign up</h2>
           <div class="input-field">
             <i class="fas fa-user"></i>
@@ -44,10 +44,6 @@
           <div class="input-field">
             <i class="fas fa-user"></i>
             <input type="text" name="telp" placeholder="No Telp." />
-          </div>
-          <div class="input-field">
-            <i class="fas fa-envelope"></i>
-            <input type="email" name="email" placeholder="Email" />
           </div>
           <div class="input-field">
             <i class="fas fa-user"></i>
