--- a/views/admin/order_view.ejs
+++ b/views/admin/order_view.ejs
@@ -5,14 +5,58 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="../css/styles.css"/>
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-        <h2>Page Order</h2>
-        <!-- <a href="/create-produk" class="btn btn-success">Tambah Produk</a> -->
-        <table class="table">
-            <thead>
+    <%- include('../template/nav.ejs') %>
+    <div class="container-fluid px-4">
+        <div class="row g-3 my-2">
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">720</h3>
+                        <p class="fs-5">Products</p>
+                    </div>
+                    <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">4920</h3>
+                        <p class="fs-5">Sales</p>
+                    </div>
+                    <i
+                        class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">746</h3>
+                        <p class="fs-5">Order</p>
+                    </div>
+                    <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">%25</h3>
+                        <p class="fs-5">Increase</p>
+                    </div>
+                    <i class="fas fa-chart-line fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+        </div>
+        <p id="user" style="display: none;"><%= user.nama_admin %></p>
+        <table class="table table-bordered border-dark table-hover bg">
+            <thead class="bg-light">
               <tr>
                 <th scope="col">id</th>
                 <th scope="col">id_user</th>
@@ -35,8 +79,8 @@
                         <td><%= e.nama_barang %> </td>
                         <td><%= e.harga %> </td>
                         <td><%= e.jumlah %> </td>
-                        <td><%= e.total %> </td>
-                        <td><img src="../img/<%= e.info %>" width="60px" height="60px"></td>
+                        <td><%= e.harga*e.jumlah %> </td>
+                        <td><img src="../img/<%= e.info %>" width="60px" height="40px"></td>
                         <td ><%= e.updatedAt.toLocaleDateString() %> </td>
                         <td>
                             <button onclick= <%= "del("+e.id_order+")" %>  type="button" class="btn btn-danger">Tolak</button>
@@ -48,42 +92,51 @@
             </tbody>
           </table>
     </div>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-        const del = (id) =>{
-            alert('Are you delete id : ' +id)
-            axios.delete('/admin/api/order/'+id).then(result =>{
-                alert('info status : '+ result.status)
-                location.reload()
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+    const del = (id) =>{
+        alert('Are you delete id : ' +id)
+        axios.delete('/admin/api/order/'+id).then(result =>{
+            alert('info status : '+ result.status)
+            location.reload()
+        }).catch(err =>{
+            alert('error : '+err)
+        });
+    }
+    const create = (idorder,iduser,idbarang,jumlah,hargabarang,buktitf) =>{
+        axios({
+            method : 'post',
+            url : '/admin/api/transaksi',
+            data :{
+                id_barang : idbarang,
+                id_user : iduser,
+                jumlah : jumlah,
+                harga : hargabarang,                
+                info : buktitf
+                }
+                }).then(result =>{
+                    alert('info status: '+result.status)
+                    window.location = "http://127.0.0.1:3000/user";
+                }).catch(err =>{
+                    alert('error :'+err)
+                    window.location = "/"
+                });
+        axios.delete('/admin/api/order/'+idorder).then(result =>{
+            alert('info status : '+ result.status)
+            location.reload()
             }).catch(err =>{
                 alert('error : '+err)
             });
         }
-        const create = (idorder,iduser,idbarang,jumlah,hargabarang,buktitf) =>{
-            axios({
-                method : 'post',
-                url : '/admin/api/transaksi',
-                data :{
-                    id_barang : idbarang,
-                    id_user : iduser,
-                    jumlah : jumlah,
-                    harga : hargabarang,                
-                    info : buktitf
-                    }
-                    }).then(result =>{
-                        alert('info status: '+result.status)
-                        window.location = "http://127.0.0.1:3000/user";
-                    }).catch(err =>{
-                        alert('error :'+err)
-                        window.location = "/"
-                    });
-            axios.delete('/admin/api/order/'+idorder).then(result =>{
-                alert('info status : '+ result.status)
-                location.reload()
-                }).catch(err =>{
-                    alert('error : '+err)
-                });
-            }
-    </script>
-</body>
+        var el = document.getElementById("wrapper");
+        var toggleButton = document.getElementById("menu-toggle");
+
+        toggleButton.onclick = function () {
+            el.classList.toggle("toggled");
+        };
+        const change = document.getElementById('title').innerHTML = "Order";
+        const change2 = document.getElementById('navbarDropdown').innerHTML = document.getElementById('user').innerHTML;
+</script>
 </html>
