--- a/views/admin/produk_update.ejs
+++ b/views/admin/produk_update.ejs
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <link rel="stylesheet" href="../../../css/styles.css"/>
     <title>Document</title>
 </head>
 <body>
-    <div class="d-flex justify-content-center">
+  <%- include('../template/nav.ejs') %>
+  <p id="user" style="display: none;"><%= user.nama_admin %></p>
+  <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center bg-light col-3.5" style="padding: 20px; border-radius: 2%;">
       <form>
         <div class="mb-4">
           <label for="exampleInputEmail1" class="form-label">Nama Barang</label>
@@ -29,28 +34,36 @@
         
         <button type="submit" class="btn btn-primary" id="submit" onclick=<%= "edit("+Produk.id_barang+")" %> >Edit</button>
       </form>
-
-          <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-          <script>
-            const edit = id =>{
-              axios({ 
-                method : 'put',
-                url : '/admin/api/produk/'+id,
-                data :{
-                  nama_barang : document.getElementById("name").value,
-                  deskripsi : document.getElementById("deskripsi").value,
-                  harga : document.getElementById("harga").value,                  
-                  gambar : document.getElementById("image").value.replace("C:\\fakepath\\", "")
-                }
-              }).then(result =>{
-                window.location = "/admin/produk";
-              }).catch(err =>{
-                alert('error :'+err)
-                window.location = "/"
-              });
-            }
-          </script>
     </div>
+  </div>
     
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script>
+  const edit = id =>{
+    axios({ 
+      method : 'put',
+      url : '/admin/api/produk/'+id,
+      data :{
+        nama_barang : document.getElementById("name").value,
+        deskripsi : document.getElementById("deskripsi").value,
+        harga : document.getElementById("harga").value,                  
+        gambar : document.getElementById("image").value.replace("C:\\fakepath\\", "")
+      }
+    }).then(result =>{
+      window.location = "/admin/produk";
+    }).catch(err =>{
+      alert('error :'+err)
+      window.location = "/"
+    });
+  }
+  var el = document.getElementById("wrapper");
+  var toggleButton = document.getElementById("menu-toggle");
+  toggleButton.onclick = function () {
+    el.classList.toggle("toggled");
+  };
+  const change = document.getElementById('title').innerHTML = "Produk";
+  const change2 = document.getElementById('navbarDropdown').innerHTML = document.getElementById('user').innerHTML;
+</script>
 </html>
