--- a/views/admin/transaksi_view.ejs
+++ b/views/admin/transaksi_view.ejs
@@ -1,66 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/styles.css"/>
     <title>Dashboard</title>
 </head>
-
 <body>
-        <%- include('../template/nav.ejs') %> 
-        <div class="container-fluid px-4">
-            <div class="row g-3 my-2">
-                <div class="col-md-3">
-                    <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                        <div>
-                            <h3 class="fs-2">720</h3>
-                            <p class="fs-5">Products</p>
-                        </div>
-                        <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+    <%- include('../template/nav.ejs') %>
+    <div class="container-fluid px-4">
+        <div class="row g-3 my-2">
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">720</h3>
+                        <p class="fs-5">Products</p>
                     </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                        <div>
-                            <h3 class="fs-2">4920</h3>
-                            <p class="fs-5">Sales</p>
-                        </div>
-                        <i
-                            class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                        <div>
-                            <h3 class="fs-2"><%= Transaksi.length %></h3>
-                            <p class="fs-5">Order</p>
-                        </div>
-                        <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
-                        <div>
-                            <h3 class="fs-2">%25</h3>
-                            <p class="fs-5">Increase</p>
-                        </div>
-                        <i class="fas fa-chart-line fs-1 primary-text border rounded-full secondary-bg p-3"></i>
-                    </div>
+                    <i class="fas fa-gift fs-1 primary-text border rounded-full secondary-bg p-3"></i>
                 </div>
             </div>
-        <h2>Page Transaksi</h2>
-        <!-- <a href="/create-produk" class="btn btn-success">Tambah Produk</a> -->
+
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">4920</h3>
+                        <p class="fs-5">Sales</p>
+                    </div>
+                    <i
+                        class="fas fa-hand-holding-usd fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2"><%= Transaksi.length %></h3>
+                        <p class="fs-5">Order</p>
+                    </div>
+                    <i class="fas fa-truck fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+
+            <div class="col-md-3">
+                <div class="p-3 bg-white shadow-sm d-flex justify-content-around align-items-center rounded">
+                    <div>
+                        <h3 class="fs-2">%25</h3>
+                        <p class="fs-5">Increase</p>
+                    </div>
+                    <i class="fas fa-chart-line fs-1 primary-text border rounded-full secondary-bg p-3"></i>
+                </div>
+            </div>
+        </div>
+        <p id="user" style="display: none;"><%= user.nama_admin %></p>
         <table class="table table-bordered border-dark table-hover bg">
             <thead class="bg-light">
-              <tr>
+            <tr>
                 <th scope="col">id</th>
                 <th scope="col">id_user</th>
                 <th scope="col">id_barang</th>
@@ -70,9 +67,7 @@
                 <th scope="col">Total</th>
                 <th scope="col">Bukti TF</th>
                 <th scope="col">tanggal</th>
-                <th scope="col">Resi</th>
-                <th>Action</th>
-              </tr>
+            </tr>
             </thead>
             <tbody>
                 <% Transaksi.forEach(e => { %>
@@ -83,25 +78,16 @@
                         <td><%= e.nama_barang %> </td>
                         <td><%= e.harga %> </td>
                         <td><%= e.jumlah %> </td>
-                        <td><%= e.total %> </td>
-                        <td><img src="img/<%= e.info %>" width="60px" height="60px"></td>
+                        <td><%= e.harga*e.jumlah %> </td>
+                        <td><img src="../../img/<%= e.info %>" width="60px" height="60px"></td>
                         <td ><%= e.updatedAt.toLocaleDateString() %> </td>
-                        <td>Resinull</td>
-                        <td>
-                            <button onclick= <%= "create("+[e.id_user,e.id_barang,e.jumlah,e.harga,"'"+e.info+"'"]+")" %>  type="button" class="btn btn-warning" >Edit</button>                            
-                        </td>
                     </tr>
                 <% }) %>
             </tbody>
-          </table>
-
-            </div>
-        </div>
+        </table>
     </div>
-    <!-- /#page-content-wrapper -->
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
         const del = (id) =>{
@@ -138,7 +124,7 @@
         toggleButton.onclick = function () {
             el.classList.toggle("toggled");
         };
+        const change = document.getElementById('title').innerHTML = "Transaksi";
+        const change2 = document.getElementById('navbarDropdown').innerHTML = document.getElementById('user').innerHTML;
     </script>
-</body>
-
 </html>
