--- a/views/css/styles.css
+++ b/views/css/styles.css
@@ -1,10 +1,9 @@
 :root {
-  --main-bg-color: #009d63;
-  --main-text-color: #009d63;
+  --main-bg-color: yellow;
+  --main-text-color: #0275d8;
   --second-text-color: #bbbec5;
-  --second-bg-color: #c1efde;
+  --second-bg-color: #c4e0f8;
 }
-
 .primary-text {
   color: var(--main-text-color);
 }
@@ -27,14 +26,7 @@
 
 #wrapper {
   overflow-x: hidden;
-  background-image: linear-gradient(
-    to right,
-    #baf3d7,
-    #c2f5de,
-    #cbf7e4,
-    #d4f8ea,
-    #ddfaef
-  );
+  background-color: rgb(234, 234, 234)
 }
 
 #sidebar-wrapper {
