--- a/views/user/order_view.ejs
+++ b/views/user/order_view.ejs
@@ -13,7 +13,7 @@
     <title>Order</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning" style="margin-bottom: 30px;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary" style="margin-bottom: 30px;">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
