--- a/views/admin/produk_update.ejs
+++ b/views/admin/produk_update.ejs
@@ -11,59 +11,39 @@
 </head>
 <body>
   <%- include('../template/nav.ejs') %>
-  <p id="user" style="display: none;"><%= user.nama_admin %></p>
   <div class="d-flex justify-content-center">
     <div class="d-flex justify-content-center bg-light col-3.5" style="padding: 20px; border-radius: 2%;">
-      <form>
+      <form  action="/admin/api/produk/edit/<%= Produk.id_barang %> " method="post">
         <div class="mb-4">
           <label for="exampleInputEmail1" class="form-label">Nama Barang</label>
-          <input type="text" class="form-control" id="name" value="<%= Produk.nama_barang %> ">
+          <input type="text" class="form-control" id="name" name="nama_barang" value="<%= Produk.nama_barang %> ">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Deskripsi</label>
-          <input type="text" class="form-control" id="deskripsi" value="<%= Produk.deskripsi %> ">
+          <input type="text" class="form-control" id="deskripsi" name="deskripsi" value="<%= Produk.deskripsi %> ">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">harga</label>
-          <input type="text" class="form-control" id="harga" value="<%= Produk.harga %> ">
+          <input type="text" class="form-control" id="harga" name="harga" value="<%= Produk.harga %> ">
         </div>
         <div class="mb-3">
           <label for="exampleInputPassword1" class="form-label">Gambar</label>
-          <input type="file" class="form-control" id="image" value="<%= Produk.gambar %> ">
+          <input type="file" class="form-control" id="image" name="gambar" value="<%= Produk.gambar %> ">
         </div>
         
-        <button type="submit" class="btn btn-primary" id="submit" onclick=<%= "edit("+Produk.id_barang+")" %> >Edit</button>
+        <button type="submit" class="btn btn-primary" id="submit">Edit</button>
       </form>
     </div>
   </div>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
-  const edit = id =>{
-    axios({ 
-      method : 'put',
-      url : '/admin/api/produk/'+id,
-      data :{
-        nama_barang : document.getElementById("name").value,
-        deskripsi : document.getElementById("deskripsi").value,
-        harga : document.getElementById("harga").value,                  
-        gambar : document.getElementById("image").value.replace("C:\\fakepath\\", "")
-      }
-    }).then(result =>{
-      window.location = "/admin/produk";
-    }).catch(err =>{
-      alert('error :'+err)
-      window.location = "/"
-    });
-  }
   var el = document.getElementById("wrapper");
   var toggleButton = document.getElementById("menu-toggle");
   toggleButton.onclick = function () {
     el.classList.toggle("toggled");
   };
   const change = document.getElementById('title').innerHTML = "Produk";
-  const change2 = document.getElementById('navbarDropdown').innerHTML = document.getElementById('user').innerHTML;
 </script>
 </html>
