--- a/views/admin/transaksi_view.ejs
+++ b/views/admin/transaksi_view.ejs
@@ -54,14 +54,14 @@
                 </div>
             </div>
         </div>
-        <p id="user" style="display: none;"><%= user.nama_admin %></p>
         <table class="table table-bordered border-dark table-hover bg">
             <thead class="bg-light">
             <tr>
                 <th scope="col">id</th>
-                <th scope="col">id_user</th>
-                <th scope="col">id_barang</th>
-                <th scope="col">Barang</th>
+                <th scope="col">Nama Pembeli</th>
+                <th scope="col">No Telp</th>
+                <th scope="col">Alamat</th>
+                <th scope="col">Nama Barang</th>
                 <th scope="col">Harga</th>
                 <th scope="col">Jumlah</th>
                 <th scope="col">Total</th>
@@ -73,8 +73,9 @@
                 <% Transaksi.forEach(e => { %>
                     <tr>
                         <td><%= e.id_transaksi %> </td>
-                        <td><%= e.id_user %> </td>
-                        <td><%= e.id_barang %> </td>
+                        <td><%= e.nama_pembeli %> </td>
+                        <td><%= e.no_telp %> </td>
+                        <td><%= e.alamat %> </td>
                         <td><%= e.nama_barang %> </td>
                         <td><%= e.harga %> </td>
                         <td><%= e.jumlah %> </td>
@@ -90,34 +91,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
-        const del = (id) =>{
-            alert('Are you delete id : ' +id)
-            axios.delete('/api/transaksi/'+id).then(result =>{
-                alert('info status : '+ result.status)
-                location.reload()
-            }).catch(err =>{
-                alert('error : '+err)
-            });
-        }
-        const create = (iduser,idbarang,jumlah,hargabarang,buktitf) =>{
-            axios({
-                method : 'post',
-                url : '/api/transaksi',
-                data :{
-                    id_barang : idbarang,
-                    id_user : iduser,
-                    jumlah : jumlah,
-                    harga : hargabarang,                
-                    info : buktitf
-                    }
-                    }).then(result =>{
-                        alert('info status: '+result.status)
-                        window.location = "http://127.0.0.1:3000/user";
-                    }).catch(err =>{
-                        alert('error :'+err)
-                        window.location = "/"
-                    });
-            }
         var el = document.getElementById("wrapper");
         var toggleButton = document.getElementById("menu-toggle");
 
@@ -125,6 +98,5 @@
             el.classList.toggle("toggled");
         };
         const change = document.getElementById('title').innerHTML = "Transaksi";
-        const change2 = document.getElementById('navbarDropdown').innerHTML = document.getElementById('user').innerHTML;
     </script>
 </html>
