--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -45,10 +45,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user me-2"></i>Admin
+                            <i class="fas fa-user me-2"></i><%= user.nama_admin %>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
+                            <li><a class="dropdown-item" href="/admin/profile/<%= user.id_admin %> ">Profile</a></li>
                             <li><a class="dropdown-item" href="#">Settings</a></li>
                             <li><a class="dropdown-item" href="/admin/logout">Logout</a></li>
                         </ul>
