menambah fitur melihat order dan transaksi

--- a/views/template/nav_user.ejs
+++ b/views/template/nav_user.ejs
@@ -10,10 +10,10 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/order/orderview/<%= user.id_user %> ">Order</a>
+            <a class="nav-link" href="/user/order/<%= user.id_user %> ">Order</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/order/orderview/<%= user.id_user %> ">Riwayat Pemesanan</a>
+            <a class="nav-link" href="/user/transaksi/<%= user.id_user %>">Riwayat Pemesanan</a>
           </li>
         </ul>
         
