--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <body>
       <nav style="height: 70px;" class="navbar navbar-expand-lg navbar-light shadow p-3 mb-5 bg-body rounded">
         <div class="container" style="padding-top: 35px;">
-          <a class="navbar-brand" href="#">DekProtProt </a>
+          <a class="navbar-brand" href="#">E-CHEST </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,8 +27,8 @@
       <div class="container tengah">
         <div class="row workingspace">
           <div class="col-lg-5 ">
-            <h3>Selamat Datang di<span>  DekProtProt.</span> Tempatnya Beli Keranjang.</h3>
-            <p>DekProtProt Siap melayani kebutuhan Keranjang Anda.</p>
+            <h3>Selamat Datang di<span>  E-CHEST.</span> Tempatnya Beli Keranjang.</h3>
+            <p>E-CHEST Siap melayani kebutuhan Keranjang Anda.</p>
             <a href="/admin/login" class="btn btn-primary tombols">Admin</a>
             <a href="/user/login" class="btn btn-secondary tombols">User</a>
           </div>
