--- a/views/template/nav_user.ejs
+++ b/views/template/nav_user.ejs
@@ -13,7 +13,7 @@
             <a class="nav-link" href="/user/order/<%= user.id_user %> ">Order</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/transaksi/<%= user.id_user %>">Riwayat Pemesanan</a>
+            <a class="nav-link" href="/user/transaksi/<%= user.nama_pembeli %>">Riwayat Pemesanan</a>
           </li>
         </ul>
         
