--- a/views/user/transaksi_view.ejs
+++ b/views/user/transaksi_view.ejs
@@ -20,7 +20,7 @@
         <div class="card mb-2" style="max-width: 650px;">
           <div class="row g-0">
             <div class="col-md-5">
-              <img src="../../img/<%=e.gambar %>" class="img-fluid rounded-start" alt="..." style="width: 450px;height: 245px;">
+              <img src="../../img/<%=e.produk.gambar %>" class="img-fluid rounded-start" alt="..." style="width: 450px;height: 245px;">
             </div>
             <div class="col-md-6">
               <div class="card-body">
