menambah fitur profile user

--- a/views/admin/profile.ejs
+++ b/views/admin/profile.ejs
@@ -21,7 +21,7 @@
                     <p>Username : <%= Admin.username %> </p>
                     <p>Password : <%= Admin.password %> </p>
                     <p>No Telp  : <%= Admin.no_telp %> </p>
-                    <p>Email    : <%= Admin.alamat %> </p>
+                    <p>Alamat    : <%= Admin.alamat %> </p>
                   </div><br>
                   <a href="/admin/profile/edit/<%= Admin.id_admin %> " class="btn btn-warning" style="margin-left: 8rem;">Edit</a>
                 </div>
