--- a/views/user/orderdetail_create.ejs
+++ b/views/user/orderdetail_create.ejs
@@ -46,23 +46,5 @@
       const hargaproduk = document.getElementById("hargaproduk").innerHTML.replace("Rp. ","");
       document.getElementById("total").innerHTML = "Total : Rp. "+jumlah*hargaproduk;
     }
-  //   const create = (iduser,idbarang,hargabarang) =>{
-  //     axios({
-  //       method : 'post',
-  //       url : '/user/api/order',
-  //       data :{
-  //         id_barang : idbarang,
-  //         id_user : iduser,
-  //         jumlah : document.getElementById("jumlah").value,
-  //         harga : hargabarang,                 
-  //         info : document.getElementById("bukti_tf").value.replace("C:\\fakepath\\", "")
-  //       }
-  //     }).then(result =>{
-  //         window.location = "/user/produk";
-  //     }).catch(err =>{
-  //       alert('error :'+err)
-  //       window.location = "/"
-  //     });
-  //   }
-  // </script>
+  </script>
 </html>
