--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <style>
       body{
           background-color: rgb(234, 234, 234);
@@ -16,17 +17,19 @@
   <%- include('../template/nav_user.ejs') %>
   <div class="row d-flex justify-content-evenly">
     <% Produk.forEach(e => { %>
-      <div class="card" style="width: 16rem; padding: 15px; margin: 3px;">
-        <img src="../../img/<%=e.gambar %> " class="card-img-top" width="200px" height="200px">
-        <div class="card-body">
-          <h5 class="card-title"><%= e.nama_barang %></h5>
-          <p class="card-text"><%= e.deskripsi %></p>
+      <% if(e.harga >0){ %>
+        <div class="card" style="width: 16rem; padding: 15px; margin: 3px;">
+          <img src="../../img/<%=e.gambar %> " class="card-img-top" width="200px" height="200px">
+          <div class="card-body">
+            <h5 class="card-title"><%= e.nama_barang %></h5>
+            <p class="card-text"><%= e.deskripsi %></p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Harga : Rp. <%= e.harga %></li>
+          </ul>
+          <a href="/user/create/order/<%= e.id_barang %> " class="btn btn-primary">Order</a>
         </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item">Harga : Rp. <%= e.harga %></li>
-        </ul>
-        <a href="/user/create/order/<%= e.id_barang %> " class="btn btn-primary">Order</a>
-      </div>             
+      <% } %>             
     <% }) %>
   </div>
   </body>
