--- a/views/user/order_view.ejs
+++ b/views/user/order_view.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <style>
       body{
           background-color: rgb(234, 234, 234);
@@ -32,8 +33,9 @@
                   <span class="card-text">Nama Pembeli  : <%= e.nama_pembeli %> </span><br>
                   <span class="card-text">Alamat        : <%= e.alamat %> </span><br>
                   <span class="card-text">Bukti Pembayaran : <a href="/user/order/image/<%= e.id_order %> ">Klik</a> </span><br>
-                </div>                
+                </div>
                 <a href="/user/api/order/<%= e.id_order %> " class="btn btn-danger" style="margin-top: 10px;">Batal Transaksi</a>
+                <a href="/user/order/edit/<%= e.id_order %> " class="btn btn-warning" style="margin-top: 10px;">Ubah Transaksi</a>
               </div>
             </div>
           </div>
