--- a/views/user/transaksi_view.ejs
+++ b/views/user/transaksi_view.ejs
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <style>
       body{
           background-color: rgb(234, 234, 234);
@@ -20,7 +21,7 @@
         <div class="card mb-2" style="max-width: 650px;">
           <div class="row g-0">
             <div class="col-md-5">
-              <img src="../../img/<%=e.produk.gambar %>" class="img-fluid rounded-start" alt="..." style="width: 450px;height: 245px;">
+              <img src="../../img/<%=e.gambar %>" class="img-fluid rounded-start" alt="..." style="width: 450px;height: 240px;">
             </div>
             <div class="col-md-6">
               <div class="card-body">
