--- a/views/admin/produk_create.ejs
+++ b/views/admin/produk_create.ejs
@@ -30,7 +30,13 @@
             <label for="exampleInputPassword1" class="form-label">Gambar</label>
             <input type="file" class="form-control" id="image" name="gambar">
           </div>
-          
+          <div class="mb-3">
+            <label ffor="exampleInputPassword1" class="form-label">Status Produk</label>
+            <select name="status" class="form-control" id="inputGroupSelect02">
+              <option value="1">Aktif</option>
+              <option value="0">Kosong</option>
+            </select>
+          </div>          
           <button type="submit" class="btn btn-primary" id="submit">Submit</button>
         </form>
       </div>
