--- a/views/user/transaksi_view.ejs
+++ b/views/user/transaksi_view.ejs
@@ -33,6 +33,7 @@
                   <span class="card-text">Nama Pembeli  : <%= e.nama_pembeli %> </span><br>
                   <span class="card-text">Alamat        : <%= e.alamat %> </span><br>
                 </div>
+                <a href="/user/rating/create/<%= e.id_barang %> " class="btn btn-primary" style="margin-top: 12px;">Rating Produk</a>
               </div>
             </div>
           </div>
