--- a/views/admin/produk_view.ejs
+++ b/views/admin/produk_view.ejs
@@ -62,6 +62,7 @@
                 <th scope="col">Nama Barang</th>
                 <th scope="col">Deskripsi</th>
                 <th scope="col">Harga</th>
+                <th scope="col">Status</th>
                 <th scope="col">Gambar</th>
                 <th>Action</th>
               </tr>
@@ -73,10 +74,16 @@
                         <th><%= e.nama_barang %> </th>
                         <td><%= e.deskripsi %> </td>
                         <td><%= e.harga %> </td>
+                        <td><% if (e.status === 1) { %>
+                            Tersedia
+                        <% } else { %>
+                            Kosong
+                        <% } %> 
+                         </td>
                         <td><img src="../img/<%= e.gambar %>" width="60px" height="60px"></td>
                         <td>
                             <a href="/admin/produk/edit/<%= e.id_barang %> " class="btn btn-warning">Edit</a>
-                            <a href="/admin/api/produk/delete/<%= e.id_barang %> " class="btn btn-danger">Delete</a>
+                            <!-- <a href="/admin/api/produk/delete/<%= e.id_barang %> " class="btn btn-danger">Delete</a> -->
                         </td>
                     </tr>
                 <% }) %>
