--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -45,7 +45,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle second-text fw-bold" href="#" id="navbarDropdown"
                             role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            <i class="fas fa-user me-2"></i><%= admin.nama_admin %>
+                            <i class="fas fa-user me-2"></i><%= admin.username %>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/admin/profile/<%= admin.id_admin %> ">Profile</a></li>
