--- a/views/template/nav_user.ejs
+++ b/views/template/nav_user.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-primary"  style="margin-bottom: 20px;">
+<nav class="navbar navbar-expand-lg navbar-light bg-primary mb-3">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
           </li>
         </ul>
         <div class="d-flex btn-group">
-          <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; text-decoration: none;"><%= user.nama_pembeli %></a>
+          <a class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; text-decoration: none;"><%= user.username %></a>
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="/user/profile/<%= user.id_user %> ">Profile</a></li>
             <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
