menambah rating view admin

--- a/views/template/nav.ejs
+++ b/views/template/nav.ejs
@@ -16,6 +16,9 @@
             <a href="/admin/transaksi" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
                 <i class="fas fa-shopping-cart me-2"></i>Transaksi
             </a>
+            <a href="/admin/ulasan" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
+                <i class="fas fa-project-diagram me-2"></i>Ulasan Produk
+            </a>
             <a href="/admin/user" class="list-group-item list-group-item-action bg-transparent second-text fw-bold">
                 <i class="fas fa-project-diagram me-2"></i>Akun User
             </a>
